[project]
name = "epochraft_hf_fsdp"
description = "Example of using Epochraft to train HuggingFace transformers models with PyTorch FSDP"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Takuya Akiba"},
  {email = "takuya.akiba@stability.ai"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
  "torch >= 2.1.0",
  "transformers >= 4.34.0",  # use_flash_attention_2
  "epochraft",
  "colorlog",
  "tqdm",
  "omegaconf",
  "wandb",
  "joblib",
]
dynamic = ["version"]

[project.optional-dependencies]
development = [
    "black",
    "blackdoc",
    "flake8",
    "isort",
    "mypy",
    "pytest",
]

[project.urls]
repository = "https://github.com/iwiwi/epochraft-hf-fsdp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
include = ["epochfsdp*"]

[tool.black]
line-length = 99
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = 'black'
src_paths = ['src/epochfsdp', 'tests']
line_length = 99
lines_after_imports = 2

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_any_generics = false
exclude = ".venv|venv|build|docs|tutorial|tmp|out"
disallow_untyped_decorators = false
disallow_untyped_calls = false